--- a/mfusg_henry_disu.ipynb
+++ b/mfusg_henry_disu.ipynb
@@ -295,10 +295,10 @@
     "dtype = flopy.modflow.ModflowWel.get_empty(ncells=0,aux_names=['C01'], structured=False).dtype\n",
     "#Initial SS flow field and init uniform TDS conditions\n",
     "for k in range(nlay):\n",
-    "    wel_data[0].append([0 + (k*ncol), qinflow / nlay, 35.0]) # kper0 SS inflow @35mg/L TDS\n",
+    "    wel_data[0].append([0 + (k*ncol), qinflow / nlay, 35.0]) # kper0 SS inflow @35g/L TDS\n",
     "# Transport TR henry problem\n",
     "for k in range(nlay):\n",
-    "    wel_data[1].append([0 + (k*ncol), qinflow / nlay, 0.0]) # kper1 TR inflow @0mg/L TDS\n",
+    "    wel_data[1].append([0 + (k*ncol), qinflow / nlay, 0.0]) # kper1 TR inflow @0g/L TDS\n",
     "    #ssm_sp1.append([k, 0, 0, 0.0, itype[\"WEL\"]])\n",
     "    #ssm_sp1.append([k, 0, ncol - 1, 35.0, itype[\"BAS6\"]])\n",
     "#wel_data[0] = wel_sp1\n",
@@ -1621,7 +1621,7 @@
     "        width=0.0025,\n",
     "    ){\"\"\"\n",
     "    cax = fig.add_axes([0.27, 0.2, 0.5, 0.05])\n",
-    "    fig.colorbar(conc_im, cax=cax, orientation='horizontal', label=\"Concentration [mg/L]\")\n",
+    "    fig.colorbar(conc_im, cax=cax, orientation='horizontal', label=\"Concentration [g/L]\")\n",
     "    \n",
     "    print(np.asarray(concentration).shape)\n",
     "    levels = [0] + [35 * f for f in [0.01, 0.1, 0.5, 0.9, 0.99]]\n",
